Issue #2978 - Add module-info to relevant Jetty modules.
Added module-info to javax websocket modules.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>